<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10sp"
    android:layout_marginTop="10sp"
    android:layout_marginRight="10sp"
    android:orientation="vertical"
    tools:context=".CryptActivities.TrithemiusActivity">

    <TextView
        android:id="@+id/textViewTrithemius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewTrithemius"
        android:gravity="center"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/textViewTrithemiusInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewStringInput"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTrithemiusForEncDec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/editTextForEncDec"
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radioButtonTrithemiusEnc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonEnc" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radioButtonTrithemiusDec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonDec" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/editTextTrithemiusKey1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/editTextInputKey1"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextTrithemiusKey2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/editTextInputKey2"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextTrithemiusKey3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/editTextInputKey3"
            android:inputType="number" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTrithemiusResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewResult"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTrithemiusResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnTrithemiusGetResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnGetResult"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>