<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10sp"
    android:layout_marginTop="10sp"
    android:layout_marginRight="10sp"
    android:orientation="vertical"
    tools:context=".CryptActivities.CaesarActivity">

    <TextView
        android:id="@+id/textViewCaesar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewCaesar"
        android:gravity="center"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/textViewCaesarInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewStringInput"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextCaesarForEncDec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/editTextForEncDec"
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radioButtonCaesarEnc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonEnc" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radioButtonCaesarDec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonDec" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewCaesarKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewInputKey"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextCaesarKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textViewCaesarResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewResult"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextCaesarResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnCaesarGetResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnGetResult"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>